2016-02-24  James Youngman  <jay@gnu.org>

	Stop depending on mylist not actually being a synonym for std::vector.
	* src/sf-prs.cc (print_string_list): Remove the two versions of
	this function for std::vector<string> and mylist<string>.
	Instead, implement a single template function which takes a range
	of iterators.  This allows us not to care wither mylist is simply
	compatible with std::vector, or actually is std::vector.
	(print_delta): Update callers of print_string_list.

	Include <algorithm> where it is needed, and not where it is not.
	* src/sf-rmdel.cc: include the <algorithm> header since we use
	std::find.
	* src/mylist.h: Don't include <algorithm>, the transitive
	inclusion of which sf-rmsel.cc was previously takign advantage
	of.

	Replace constructor from const set& with a range of iterators.
	* src/mylist.h (mylist::mylist): Add constructor from a range of
	input iterators, allowing initialization from any container.
	Remove the special-purpose constructor from const set&.  This
	change provides closer compatibility with std::vector<T>,
	* src/delta.h (delta::delat): Initialize included_ and excluded
	using the iterator range instead of plain const set&.

2016-02-23  James Youngman  <jay@gnu.org>

	Remove mylist<T>::operator+=(), implementing insert() instead.
	* src/mylist.h (mylist::insert): add insert() method, forwarding
	to std::vector<T>::insert(), as a replacement for
	mylist::operator+=() (and that method is removed).
	(mylist::cbegin): add, forwarding to items_.cbegin().
	(mylist::cend): add, forwarding to items_.cend().
	* src/delta.h (delta::prepend_comments): Implement.
	* src/sf-cdc.cc (sccs_file::cdc): Call mylist::insert() instead of
	the removed mylist<T>::operator+=().  Also use
	delta::prepend_comments() to prepend comments instead of copying
	the old comments, modifying the list and callign set_comments().
	* unit-tests/test_mylist.cc (MylistTest::Catenate::TestBody): use