@@ -1,5 +1,10 @@
 2016-02-24  James Youngman  <jay@gnu.org>
 
+	Don't require mylist<T>::operator[] to assert on index errors.
+	* unit-tests/test_mylist.cc: Remove tests which verify that
+	mylist<T>::operator[] assert-fails when an index is out of range
+	(since std::vector does not do this).
+
 	Stop depending on mylist not actually being a synonym for std::vector.
 	* src/sf-prs.cc (print_string_list): Remove the two versions of
 	this function for std::vector<string> and mylist<string>.
